--- a/packages/nx-plugin/package.json
+++ b/packages/nx-plugin/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@analogjs/nx",
   "version": "0.0.1",
-  "main": "src/index.js"
+  "main": "src/index.js",
+  "dependencies": {
+    "@nx/devkit": "17.1.3"
+  }
 }
