--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
     "@ngtools/webpack": "^17.0.0",
+    "@nx/angular": "17.1.3",
     "@nx/cypress": "17.1.3",
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
