feat: working page routes esbuild plugin

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -20,7 +20,8 @@
         ],
         "styles": ["apps/analog-app/src/styles.css"],
         "inlineStyleLanguage": "scss",
-        "ssr": true
+        "ssr": true,
+        "allowedCommonJsDependencies": ["front-matter", "prismjs"]
       },
       "configurations": {
         "production": {
