feat: use application builder assets

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -25,6 +25,9 @@
       },
       "configurations": {
         "production": {
+          "optimization": {
+            "scripts": false
+          },
           "budgets": [
             {
               "type": "initial",
