--- a/apps/analog-app/tsconfig.app.json
+++ b/apps/analog-app/tsconfig.app.json
@@ -7,7 +7,7 @@
     "useDefineForClassFields": false,
     "incremental": true
   },
-  "files": ["src/main.ts", "src/main.server.ts"],
+  "files": ["src/main.ts", "src/main.server.ts", "server.ts"],
   "include": ["src/**/*.d.ts", "src/app/pages/**/*.page.ts"],
   "exclude": ["**/*.test.ts", "**/*.spec.ts"]
 }
