--- a/nx.json
+++ b/nx.json
@@ -24,7 +24,8 @@
     },
     "e2e": {
       "dependsOn": ["^build"],
-      "cache": true
+      "cache": true,
+      "inputs": ["default", "^production"]
     },
     "serve": {
       "dependsOn": ["^build"]
