--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@angular/ssr": "^17.0.0",
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -63,6 +64,7 @@
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
     "destr": "^2.0.1",
+    "express": "~4.18.2",
     "front-matter": "^4.0.2",
     "isomorphic-fetch": "^3.0.0",
     "marked": "^5.0.2",
@@ -111,6 +113,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "0.5.1",
     "@types/babel__core": "^7.20.0",
+    "@types/express": "4.17.14",
     "@types/jest": "29.4.4",
     "@types/marked": "^5.0.0",
     "@types/node": "18.11.18",
@@ -136,6 +139,7 @@
     "happy-dom": "^12.10.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-preset-angular": "~13.1.4",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
