--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -6,67 +6,6 @@
   "prefix": "analogjs",
   "targets": {
     "build": {
-      "executor": "@analogjs/platform:application",
-      "options": {
-        "outputPath": "dist/apps/analog-app/client",
-        "index": "apps/analog-app/index.html",
-        "browser": "apps/analog-app/src/main.ts",
-        "server": "apps/analog-app/src/main.server.ts",
-        "polyfills": ["zone.js"],
-        "tsConfig": "apps/analog-app/tsconfig.app.json",
-        "assets": [
-          "apps/analog-app/src/favicon.ico",
-          "apps/analog-app/src/assets"
-        ],
-        "styles": ["apps/analog-app/src/styles.css"],
-        "inlineStyleLanguage": "scss",
-        "ssr": {
-          "entry": "apps/analog-app/server.ts"
-        },
-        "allowedCommonJsDependencies": ["front-matter", "prismjs"]
-      },
-      "configurations": {
-        "production": {
-          "optimization": {
-            "scripts": false
-          },
-          "budgets": [
-            {
-              "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
-            },
-            {
-              "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
-            }
-          ],
-          "outputHashing": "all"
-        },
-        "development": {
-          "optimization": false,
-          "extractLicenses": false,
-          "sourceMap": true
-        }
-      },
-      "defaultConfiguration": "production"
-    },
-    "serve": {
-      "executor": "@analogjs/platform:dev-server",
-      "configurations": {
-        "production": {
-          "buildTarget": "analog-app:build:production"
-        },
-        "development": {
-          "buildTarget": "analog-app:build:development",
-          "port": 3000
-        }
-      },
-      "defaultConfiguration": "development",
-      "dependsOn": ["^build"]
-    },
-    "vite-build": {
       "executor": "@nx/vite:build",
       "outputs": [
         "{options.outputPath}",
@@ -89,20 +28,20 @@
         }
       }
     },
-    "vite-serve": {
+    "serve": {
       "executor": "@nx/vite:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "analog-app:build-vite",
+        "buildTarget": "analog-app:build",
         "port": 3000
       },
       "configurations": {
         "development": {
-          "buildTarget": "analog-app:vite-build:development",
+          "buildTarget": "analog-app:build:development",
           "hmr": true
         },
         "production": {
-          "buildTarget": "analog-app:vite-build:production"
+          "buildTarget": "analog-app:build:production"
         }
       },
       "dependsOn": ["^build"]
@@ -133,25 +72,6 @@
     "tests": {
       "executor": "@nx/vite:test",
       "outputs": ["{projectRoot}/coverage"]
-    },
-
-    "nitro": {
-      "executor": "@analogjs/platform:nitro",
-      "options": {
-        "buildOutputPath": "dist/apps/analog-app/client",
-        "outputPath": "dist/apps/analog-app/analog",
-        "staticBuildOutputPath": "dist/apps/analog-app/analog/public",
-        "serverBuildOutputPath": "dist/apps/analog-app/analog/server",
-        "runtimeRenderer": "packages/vite-plugin-nitro/src/lib/runtime/renderer"
-      },
-      "dependsOn": ["build"]
-    },
-    "vitest": {
-      "executor": "@analogjs/platform:test",
-      "options": {
-        "tsConfig": "apps/analog-app/tsconfig.spec.json",
-        "setupFile": "src/test-setup.ts"
-      }
     }
   },
   "tags": [],
