--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,44 +38,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
-      - name: Build
-        run: pnpm build
-      - name: Publish
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           TAG="$(${{ github.ref_name == 'main' }} && echo 'latest' || echo '${{ github.ref_name }}')"
-          RELEASE_TAG=$TAG ./tools/publish.sh
-
-  # publish:
-  #   name: Publish Packages
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - version
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version-file: .node-version
-  #     - run: corepack enable
-  #     - run: pnpm --version
-  #     - name: Install dependencies
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         cache: 'pnpm'
-  #         cache-dependency-path: '**/pnpm-lock.yaml'
-  #     - name: Install
-  #       run: pnpm install --frozen-lockfile --prefer-offline
-  #     - name: Build
-  #       run: pnpm build --skip-nx-cache
-  #     - name: Publish
-  #       env:
-  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  #       run: |
-  #         TAG="$(${{ github.ref_name == 'main' }} && echo 'latest' || echo '${{ github.ref_name }}')"
-  #         ./tools/publish.sh
+          RELEASE_TAG=$TAG npx semantic-release
