feat(vite-plugin-nitro): add support for typescript paths import resolution

--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "prettier": "^2.8.3",
     "prismjs": "^1.29.0",
     "prompts": "^2.4.2",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "rollup-plugin-visualizer": "^5.9.0",
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.0.2",
