--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/router",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.0",
   "description": "Filesystem-based routing for Angular",
   "type": "module",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
@@ -24,7 +24,7 @@
     "@angular/router": "^15.0.0 || >=16.0.0"
   },
   "optionalDependencies": {
-    "@analogjs/content": "^0.2.24"
+    "@analogjs/content": "^1.0.0-beta.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
