--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
-    "@nx/angular": "^17.1.0",
+    "@nx/angular": "~17.1.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
@@ -41,11 +41,11 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
-    "@nx/vite": "^17.1.0",
-    "nx": "^17.1.0",
+    "@nx/vite": "~17.1.0",
+    "nx": "~17.1.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.2.0",
     "vite": "^4.4.8",
-    "vitest": "^1.0.0"
+    "vitest": "^0.34.4"
   }
 }
