--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "*.ng",
+      "options": {
+        "parser": "html"
+      }
+    }
+  ]
 }
