--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "prettify": "prettier --write ."
+    "prettify": "prettier --write .",
+    "build:test": "nx build ng-app --skip-nx-cache"
   },
   "engines": {
     "node": "^18.13.0",
@@ -103,12 +104,14 @@
     "@nx/plugin": "17.1.3",
     "@nx/vite": "17.1.3",
     "@nx/web": "17.1.3",
+    "@phenomnomnominal/tsquery": "^6.1.3",
     "@schematics/angular": "^17.0.0",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "0.5.1",
     "@types/babel__core": "^7.20.0",
+    "@types/hast": "^3.0.3",
     "@types/jest": "29.4.4",
     "@types/marked": "^5.0.0",
     "@types/node": "18.11.18",
@@ -132,6 +135,9 @@
     "fs-extra": "^11.1.1",
     "h3": "^1.8.2",
     "happy-dom": "^12.10.3",
+    "hast-util-from-html": "^2.0.1",
+    "hast-util-from-parse5": "^8.0.1",
+    "hast-util-to-html": "^9.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "22.1.0",
@@ -142,6 +148,7 @@
     "ng-packagr": "^17.0.0",
     "nitropack": "^2.6.0",
     "nx": "17.1.3",
+    "parse5": "^7.1.2",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
