--- a/apps/ng-app/tsconfig.json
+++ b/apps/ng-app/tsconfig.json
@@ -25,6 +25,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "compilationMode": "experimental-local"
   }
 }
