--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.0.2",
     "ts-jest": "29.1.0",
+    "ts-morph": "^21.0.1",
     "ts-node": "10.9.1",
     "typescript": "~5.2.0",
     "vite": "5.0.0",
