--- a/apps/ng-app/tsconfig.json
+++ b/apps/ng-app/tsconfig.json
@@ -25,7 +25,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-    "compilationMode": "experimental-local"
+    "strictTemplates": true
   }
 }
