fix(vite-plugin-angular): add ts-morph as devDependency

--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -21,6 +21,9 @@
   "peerDependencies": {
     "@angular-devkit/build-angular": "^15.0.0 || >=16.0.0"
   },
+  "devDependencies": {
+    "ts-morph": "^21.0.0"
+  },
   "ng-update": {
     "packageGroup": [
       "@analogjs/astro-angular",
