--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/cdk": "^17.0.1",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/material": "^17.0.1",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/platform-server": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/animations": "^17.1.0-rc.0",
+    "@angular/cdk": "^17.1.0-rc.0",
+    "@angular/common": "^17.1.0-rc.0",
+    "@angular/compiler": "^17.1.0-rc.0",
+    "@angular/core": "^17.1.0-rc.0",
+    "@angular/forms": "^17.1.0-rc.0",
+    "@angular/material": "^17.1.0-rc.0",
+    "@angular/platform-browser": "^17.1.0-rc.0",
+    "@angular/platform-browser-dynamic": "^17.1.0-rc.0",
+    "@angular/platform-server": "^17.1.0-rc.0",
+    "@angular/router": "^17.1.0-rc.0",
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -82,15 +82,15 @@
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-devkit/core": "^17.0.0",
-    "@angular-devkit/schematics": "^17.0.0",
+    "@angular-devkit/build-angular": "^17.1.0-rc.1",
+    "@angular-devkit/core": "^17.1.0-rc.1",
+    "@angular-devkit/schematics": "^17.1.0-rc.1",
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
-    "@angular/language-service": "^17.0.0",
+    "@angular/cli": "^17.1.0-rc.1",
+    "@angular/compiler-cli": "^17.1.0-rc.0",
+    "@angular/language-service": "^17.1.0-rc.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
