--- a/apps/docs-app/package.json
+++ b/apps/docs-app/package.json
@@ -11,31 +11,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@mdx-js/react": "1.6.22",
-    "clsx": "1.2.1",
-    "prism-react-renderer": "1.3.5",
+    "@docusaurus/core": "3.1.0",
+    "@docusaurus/preset-classic": "3.1.0",
+    "@mdx-js/react": "3.0.0",
+    "clsx": "2.1.0",
+    "prism-react-renderer": "2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
-    "@docusaurus/types": "2.4.1"
-  },
-  "overrides": {
-    "@docusaurus/core": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "@docusaurus/preset-classic": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    },
-    "@mdx-js/react": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    }
+    "@docusaurus/module-type-aliases": "3.1.0",
+    "@docusaurus/types": "3.1.0"
   },
   "browserslist": {
     "production": [
@@ -50,6 +36,6 @@
     ]
   },
   "engines": {
-    "node": "^16.14.0 || >=18.10.0"
+    "node": ">=18.0"
   }
 }
