fix(vite-plugin-angular): remove experimental support for .ng files

--- a/apps/ng-app/project.json
+++ b/apps/ng-app/project.json
@@ -6,7 +6,7 @@
   "sourceRoot": "apps/ng-app/src",
   "tags": [],
   "targets": {
-    "build": {
+    "builds": {
       "executor": "@nx/vite:build",
       "outputs": [
         "{options.outputPath}",
