feat(vite-plugin-angular): enable .analog support

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "singleQuote": true,
   "overrides": [
     {
-      "files": "*.ng",
+      "files": "*.analog",
       "options": {
         "parser": "html"
       }
