--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/router",
-  "version": "0.2.30",
+  "version": "0.2.31-beta.0",
   "description": "Filesystem-based routing for Angular",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "keywords": [
@@ -23,7 +23,7 @@
     "@angular/router": "^15.0.0 || >=16.0.0"
   },
   "optionalDependencies": {
-    "@analogjs/content": "^0.2.30"
+    "@analogjs/content": "^0.2.31-beta.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
