--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -45,7 +45,7 @@
     "nx": "~17.2.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.3.0",
-    "vite": "^5.0.0",
+    "vite": "~5.0.0",
     "vitest": "^1.0.0"
   }
 }
