build: add support for and upgrade to Nx 18

--- a/apps/astro-app-e2e-playwright/project.json
+++ b/apps/astro-app-e2e-playwright/project.json
@@ -16,10 +16,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/astro-app-e2e-playwright/**/*.{js,ts}"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": [],
