--- a/apps/analog-app-e2e-cypress/project.json
+++ b/apps/analog-app-e2e-cypress/project.json
@@ -20,10 +20,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/analog-app-e2e-cypress/**/*.{js,ts}"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": [],
