--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -60,13 +60,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": [
-          "apps/analog-app/**/*.ts",
-          "apps/analog-app/**/*.html"
-        ]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "tests": {
       "executor": "@nx/vite:test",
