--- a/apps/trpc-app/project.json
+++ b/apps/trpc-app/project.json
@@ -61,10 +61,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/trpc-app/**/*.ts", "apps/trpc-app/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     },
     "tests": {
       "executor": "@nx/vite:test",
