--- a/libs/card/project.json
+++ b/libs/card/project.json
@@ -11,10 +11,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/card/**/*.ts", "libs/card/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   },
   "implicitDependencies": ["vite-plugin-angular"]
