--- a/libs/top-bar/project.json
+++ b/libs/top-bar/project.json
@@ -10,10 +10,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/top-bar/**/*.ts", "libs/top-bar/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": []
