build(create-analog): add @ngtools/webpack for blog-template
add @ngtools/webpack to blog-template to fix dev command

--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
+    "@ngtools/webpack": "^17.1.0",
     "@nx/vite": "~17.2.0",
     "nx": "~17.2.0",
     "jsdom": "^22.1.0",
