--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -29,8 +29,8 @@
     "@analogjs/vite-plugin-nitro": "^0.2.37"
   },
   "peerDependencies": {
-    "@nx/devkit": "^16.0.0 || ^17.0.0",
-    "@nx/vite": "^16.0.0 || ^17.0.0"
+    "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0",
+    "@nx/vite": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "builders": "./src/lib/nx-plugin/executors.json",
   "executors": "./src/lib/nx-plugin/executors.json",
