--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "vite": "5.0.11",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "1.2.0",
+    "vitest": "^1.3.1",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   }
