--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -46,6 +46,6 @@
     "jsdom": "^22.1.0",
     "typescript": "~5.3.0",
     "vite": "~5.0.0",
-    "vitest": "~1.2.0"
+    "vitest": "^1.3.1"
   }
 }
