--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -17,7 +17,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": "^18.13.0"
+    "node": "^18.13.0 || ^20.0.0"
   },
   "repository": {
     "type": "git",
