--- a/packages/create-analog/template-blog/package.json
+++ b/packages/create-analog/template-blog/package.json
@@ -15,8 +15,8 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^1.0.0-rc.2",
-    "@analogjs/router": "^1.0.0-rc.2",
+    "@analogjs/content": "^1.0.0-rc.3",
+    "@analogjs/router": "^1.0.0-rc.3",
     "@angular/animations": "^17.2.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
@@ -38,7 +38,8 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^1.0.0-rc.2",
+    "@analogjs/platform": "^1.0.0-rc.3",
+    "@analogjs/vite-plugin-angular": "^1.0.0-rc.3",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
