--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analogjs-platform",
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0",
   "license": "MIT",
   "type": "module",
   "scripts": {
