--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/astro-angular",
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0",
   "description": "Use Angular components within Astro",
   "type": "module",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
@@ -28,7 +28,7 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "^1.0.0-rc.3"
+    "@analogjs/vite-plugin-angular": "^1.0.0"
   },
   "peerDependencies": {
     "@angular-devkit/build-angular": ">=16.0.0",
