--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/astro-angular",
-  "version": "1.1.0-beta.1",
+  "version": "1.0.1",
   "description": "Use Angular components within Astro",
   "type": "module",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
