--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/vite-plugin-angular",
-  "version": "1.1.0-beta.1",
+  "version": "1.0.1",
   "description": "Vite Plugin for Angular",
   "type": "module",
   "keywords": [
