--- a/packages/vite-plugin-nitro/project.json
+++ b/packages/vite-plugin-nitro/project.json
@@ -17,6 +17,10 @@
           "packages/vite-plugin-nitro/src/lib/runtime/*.js",
           "packages/vite-plugin-nitro/migrations/migration.json"
         ],
+        "additionalEntryPoints": [
+          "packages/vite-plugin-nitro/src/lib/runtime/*.js"
+        ],
+        "generateExportsField": true,
         "updateBuildableProjectDepsInPackageJson": false
       }
     },
