--- a/packages/vite-plugin-nitro/project.json
+++ b/packages/vite-plugin-nitro/project.json
@@ -16,6 +16,10 @@
           "packages/vite-plugin-nitro/src/lib/runtime/*.ts",
           "packages/vite-plugin-nitro/migrations/migration.json"
         ],
+        "additionalEntryPoints": [
+          "packages/vite-plugin-nitro/src/lib/runtime/renderer.js"
+        ],
+        "generateExportsField": true,
         "updateBuildableProjectDepsInPackageJson": false
       }
     },
