--- a/packages/vite-plugin-nitro/project.json
+++ b/packages/vite-plugin-nitro/project.json
@@ -14,7 +14,7 @@
         "assets": [
           "packages/vite-plugin-nitro/*.md",
           "packages/vite-plugin-nitro/src/lib/runtime/*.ts",
-          "packages/vite-plugin-nitro/src/lib/runtime/*.mjs",
+          "packages/vite-plugin-nitro/src/lib/runtime/*.js",
           "packages/vite-plugin-nitro/migrations/migration.json"
         ],
         "updateBuildableProjectDepsInPackageJson": false
