--- a/packages/vite-plugin-nitro/package.json
+++ b/packages/vite-plugin-nitro/package.json
@@ -38,5 +38,9 @@
       "@analogjs/vite-plugin-nitro"
     ],
     "migrations": "./migrations/migration.json"
+  },
+  "imports": {
+    "#analog/ssr": "./src/index.js",
+    "#analog/index": "./src/index.js"
   }
 }
