--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+      - build-windows
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -115,6 +116,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+      - build-windows
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -166,6 +168,7 @@ jobs:
     name: '[Merge] Deploy docs website'
     needs:
       - build
+      - build-windows
       - unit
       - e2e
       - docs
