--- a/package.json
+++ b/package.json
@@ -44,23 +44,23 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "^17.2.0",
-    "@angular/cdk": "^17.1.0",
-    "@angular/common": "^17.2.0",
-    "@angular/compiler": "^17.2.0",
-    "@angular/core": "^17.2.0",
-    "@angular/forms": "^17.2.0",
-    "@angular/material": "^17.1.0",
-    "@angular/platform-browser": "^17.2.0",
-    "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/platform-server": "^17.2.0",
-    "@angular/router": "^17.2.0",
+    "@angular/animations": "17.3.2",
+    "@angular/cdk": "17.3.2",
+    "@angular/common": "17.3.2",
+    "@angular/compiler": "17.3.2",
+    "@angular/core": "17.3.2",
+    "@angular/forms": "17.3.2",
+    "@angular/material": "17.3.2",
+    "@angular/platform-browser": "17.3.2",
+    "@angular/platform-browser-dynamic": "17.3.2",
+    "@angular/platform-server": "17.3.2",
+    "@angular/router": "17.3.2",
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
-    "@nx/angular": "18.0.4",
-    "@nx/devkit": "18.0.4",
+    "@nx/angular": "18.2.1",
+    "@nx/devkit": "18.2.1",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -83,29 +83,29 @@
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular-devkit/core": "^17.2.0",
-    "@angular-devkit/schematics": "^17.2.0",
-    "@angular-eslint/eslint-plugin": "16.0.1",
-    "@angular-eslint/eslint-plugin-template": "16.0.1",
-    "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "~17.2.0",
-    "@angular/compiler-cli": "^17.2.0",
-    "@angular/language-service": "^17.2.0",
+    "@angular-devkit/build-angular": "17.3.2",
+    "@angular-devkit/core": "17.3.2",
+    "@angular-devkit/schematics": "17.3.2",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "~17.3.0",
+    "@angular/compiler-cli": "17.3.2",
+    "@angular/language-service": "17.3.2",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
-    "@ngtools/webpack": "^17.2.0",
-    "@nx/cypress": "18.0.4",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/js": "18.0.4",
-    "@nx/plugin": "18.0.4",
-    "@nx/vite": "18.0.4",
-    "@nx/web": "18.0.4",
-    "@schematics/angular": "^17.2.0",
+    "@ngtools/webpack": "17.3.2",
+    "@nx/cypress": "18.2.1",
+    "@nx/eslint": "18.2.1",
+    "@nx/eslint-plugin": "18.2.1",
+    "@nx/jest": "18.2.1",
+    "@nx/js": "18.2.1",
+    "@nx/plugin": "18.2.1",
+    "@nx/vite": "18.2.1",
+    "@nx/web": "18.2.1",
+    "@schematics/angular": "17.3.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -121,16 +121,16 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.4.0",
+    "@typescript-eslint/parser": "7.4.0",
     "all-contributors-cli": "^6.24.0",
     "astro": "3.0.8",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "^13.0.0",
+    "cypress": "^13.6.6",
     "esbuild": "0.19.5",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.14.0",
     "execa": "^7.1.1",
@@ -145,9 +145,9 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^17.2.0",
+    "ng-packagr": "17.3.0",
     "nitropack": "^2.6.0",
-    "nx": "18.0.4",
+    "nx": "18.2.1",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -163,11 +163,11 @@
     "ts-jest": "29.1.0",
     "ts-morph": "^21.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3",
-    "vite": "5.0.11",
+    "typescript": "5.4.3",
+    "vite": "^5.2.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "^1.3.1",
+    "vitest": "1.4.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   }
