--- a/apps/ng-app/project.json
+++ b/apps/ng-app/project.json
@@ -55,6 +55,9 @@
     "lint": {
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"]
+    },
+    "test": {
+      "executor": "@nx/vite:test"
     }
   }
 }
