--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "semantic-release": "^22.0.7",
+    "semantic-release-replace-plugin": "^1.2.7",
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.0.2",
     "ts-jest": "29.1.0",
