chore: fix ci check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Build
         run: pnpm build
       - name: Verify
-        run: more dist/apps/blog-app/analog/public/index.html
+        run: more dist\apps\blog-app\analog\public\index.html
 
   unit:
     runs-on: ubuntu-latest
