fix(vite-plugin-nitro): inline renderer and template on Windows for prerendering (#1041)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,8 @@ jobs:
         run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
         run: pnpm build
+      - name: Verify
+        run: more dist\apps\blog-app\analog\public\index.html
 
   unit:
     runs-on: ubuntu-latest
