chore: use globs for vite-plugin-nitro assets

--- a/packages/vite-plugin-nitro/project.json
+++ b/packages/vite-plugin-nitro/project.json
@@ -12,9 +12,21 @@
         "main": "packages/vite-plugin-nitro/src/index.ts",
         "tsConfig": "packages/vite-plugin-nitro/tsconfig.lib.json",
         "assets": [
-          "packages/vite-plugin-nitro/*.md",
-          "packages/vite-plugin-nitro/src/lib/runtime/*.*",
-          "packages/vite-plugin-nitro/migrations/migration.json"
+          {
+            "input": "packages/vite-plugin-nitro/",
+            "glob": "*.md",
+            "output": "/"
+          },
+          {
+            "input": "packages/vite-plugin-nitro/src/lib/runtime/",
+            "glob": "*.*",
+            "output": "/src/lib/runtime/"
+          },
+          {
+            "input": "packages/vite-plugin-nitro/migrations/",
+            "glob": "migration.json",
+            "output": "/migrations/"
+          }
         ],
         "updateBuildableProjectDepsInPackageJson": false
       }
