feat(create-analog): add template for upcoming Angular v18

--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -13,6 +13,7 @@
     "template-angular-v16",
     "template-angular-v17",
     "template-blog",
+    "template-latest",
     "files"
   ],
   "main": "index.js",
