feat: update deps and apps to Angular v18 release

--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -31,16 +31,16 @@
     "@analogjs/vite-plugin-angular": "^1.4.0-beta.3"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/animations": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/common": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/compiler-cli": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/compiler": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/core": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/language-service": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/platform-browser": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/platform-browser-dynamic": ">=16.0.0 || ^18.0.0-rc.0",
-    "@angular/platform-server": ">=16.0.0 || ^18.0.0-rc.0",
+    "@angular-devkit/build-angular": ">=16.0.0",
+    "@angular/animations": ">=16.0.0",
+    "@angular/common": ">=16.0.0",
+    "@angular/compiler-cli": ">=16.0.0",
+    "@angular/compiler": ">=16.0.0",
+    "@angular/core": ">=16.0.0",
+    "@angular/language-service": ">=16.0.0",
+    "@angular/platform-browser": ">=16.0.0",
+    "@angular/platform-browser-dynamic": ">=16.0.0",
+    "@angular/platform-server": ">=16.0.0",
     "rxjs": "^7.5.6",
     "zone.js": ">=0.13.3",
     "tslib": "^2.4.0"
