--- a/package.json
+++ b/package.json
@@ -44,21 +44,21 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "^18.0.0-rc.0",
-    "@angular/cdk": "^18.0.0-rc.0",
-    "@angular/common": "^18.0.0-rc.0",
-    "@angular/compiler": "^18.0.0-rc.0",
-    "@angular/core": "^18.0.0-rc.0",
-    "@angular/forms": "^18.0.0-rc.0",
-    "@angular/material": "^18.0.0-rc.0",
-    "@angular/platform-browser": "^18.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^18.0.0-rc.0",
-    "@angular/platform-server": "^18.0.0-rc.0",
-    "@angular/router": "^18.0.0-rc.0",
-    "@astrojs/mdx": "^1.1.0",
+    "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/platform-server": "^18.0.0",
+    "@angular/router": "^18.0.0",
+    "@astrojs/mdx": "^3.0.1",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
-    "@mdx-js/react": "1.6.22",
+    "@mdx-js/react": "3.0.1",
     "@nx/angular": "19.0.3",
     "@nx/devkit": "19.0.3",
     "@trpc/client": "^10.25.0",
@@ -83,20 +83,20 @@
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0-rc.0",
-    "@angular-devkit/core": "^18.0.0-rc.0",
-    "@angular-devkit/schematics": "^18.0.0-rc.0",
+    "@angular-devkit/build-angular": "^18.0.0",
+    "@angular-devkit/core": "^18.0.0",
+    "@angular-devkit/schematics": "^18.0.0",
     "@angular-eslint/eslint-plugin": "17.3.0",
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "^18.0.0-rc.0",
-    "@angular/compiler-cli": "^18.0.0-rc.0",
-    "@angular/language-service": "^18.0.0-rc.0",
+    "@angular/cli": "^18.0.0",
+    "@angular/compiler-cli": "^18.0.0",
+    "@angular/language-service": "^18.0.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
-    "@ngtools/webpack": "^18.0.0-rc.0",
+    "@ngtools/webpack": "^18.0.0",
     "@nx/cypress": "19.0.3",
     "@nx/eslint": "19.0.3",
     "@nx/eslint-plugin": "19.0.3",
@@ -105,7 +105,7 @@
     "@nx/plugin": "19.0.3",
     "@nx/vite": "19.0.3",
     "@nx/web": "19.0.3",
-    "@schematics/angular": "^18.0.0-rc.0",
+    "@schematics/angular": "^18.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -124,7 +124,7 @@
     "@typescript-eslint/eslint-plugin": "7.4.0",
     "@typescript-eslint/parser": "7.4.0",
     "all-contributors-cli": "^6.24.0",
-    "astro": "3.0.8",
+    "astro": "4.8.7",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
@@ -145,8 +145,8 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^18.0.0-rc.0",
-    "nitropack": "^2.6.0",
+    "ng-packagr": "^18.0.0",
+    "nitropack": "^2.9.0",
     "nx": "19.0.3",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
