--- a/packages/create-analog/template-latest/package.json
+++ b/packages/create-analog/template-latest/package.json
@@ -15,17 +15,17 @@
   },
   "private": true,
   "dependencies": {
-    "@analogjs/content": "^1.3.1",
-    "@analogjs/router": "^1.3.1",
-    "@angular/animations": "^18.0.0-rc.0",
-    "@angular/common": "^18.0.0-rc.0",
-    "@angular/compiler": "^18.0.0-rc.0",
-    "@angular/core": "^18.0.0-rc.0",
-    "@angular/forms": "^18.0.0-rc.0",
-    "@angular/platform-browser": "^18.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^18.0.0-rc.0",
-    "@angular/platform-server": "^18.0.0-rc.0",
-    "@angular/router": "^18.0.0-rc.0",
+    "@analogjs/content": "^1.4.0-beta.3",
+    "@analogjs/router": "^1.4.0-beta.3",
+    "@angular/animations": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/platform-server": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "@nx/angular": "~19.0.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
@@ -38,20 +38,13 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@analogjs/platform": "^1.3.1",
-    "@analogjs/vite-plugin-angular": "^1.3.1",
-    "@angular-devkit/build-angular": "^18.0.0-rc.2",
-    "@angular/cli": "^18.0.0-rc.2",
-    "@angular/compiler-cli": "^18.0.0-rc.0",
+    "@analogjs/platform": "^1.4.0-beta.3",
+    "@analogjs/vite-plugin-angular": "^1.4.0-beta.3",
+    "@angular-devkit/build-angular": "^18.0.0",
+    "@angular/cli": "^18.0.0",
+    "@angular/compiler-cli": "^18.0.0",
     "@nx/vite": "~19.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
     "jsdom": "^22.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "nx": "~19.0.0",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
