--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -20,8 +20,8 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular/core": ">=15.0.0 || ^18.0.0-rc.0",
-    "@angular/router": ">=15.0.0 || ^18.0.0-rc.0"
+    "@angular/core": ">=15.0.0 || ^18.0.0",
+    "@angular/router": ">=15.0.0 || ^18.0.0"
   },
   "optionalDependencies": {
     "@analogjs/content": "^1.4.0-beta.3"
