--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.0",
+    "@angular-devkit/architect": "^0.1800.0",
     "@angular-devkit/core": "^18.0.0",
     "@angular-devkit/schematics": "^18.0.0",
     "@angular-eslint/eslint-plugin": "17.3.0",
@@ -112,7 +113,7 @@
     "@swc-node/register": "1.8.0",
     "@swc/cli": "0.3.12",
     "@swc/core": "~1.3.85",
-    "@swc/helpers": "0.5.1",
+    "@swc/helpers": "~0.5.2",
     "@types/babel__core": "^7.20.0",
     "@types/hast": "^3.0.3",
     "@types/jest": "29.4.4",
