--- a/packages/vite-plugin-nitro/package.json
+++ b/packages/vite-plugin-nitro/package.json
@@ -29,13 +29,13 @@
   },
   "ng-update": {
     "packageGroup": [
-      "@analogjs/astro-angular",
       "@analogjs/platform",
       "@analogjs/content",
       "@analogjs/router",
       "@analogjs/trpc",
       "@analogjs/vite-plugin-angular",
-      "@analogjs/vite-plugin-nitro"
+      "@analogjs/vite-plugin-nitro",
+      "@analogjs/vitest-angular"
     ],
     "migrations": "./migrations/migration.json"
   },
