--- a/packages/vitest-angular/package.json
+++ b/packages/vitest-angular/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@analogjs/platform",
+  "name": "@analogjs/vitest-angular",
   "version": "1.4.0-beta.5",
-  "description": "The fullstack meta-framework for Angular",
+  "description": "Vitest Builder for Angular",
   "type": "module",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "exports": {
@@ -11,7 +11,7 @@
   "keywords": [
     "angular",
     "vite",
-    "plugin-vite",
+    "vitest",
     "meta-framework"
   ],
   "license": "MIT",
@@ -23,19 +23,15 @@
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
   },
-  "dependencies": {
-    "nitropack": "^2.9.0",
-    "@analogjs/vite-plugin-angular": "^1.4.0-beta.5",
-    "@analogjs/vite-plugin-nitro": "^1.4.0-beta.5"
+  "builders": "./builders.json",
+  "ng-add": {
+    "save": "devDependencies"
   },
   "peerDependencies": {
-    "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "@nx/vite": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+    "@analogjs/vite-plugin-angular": "^1.3.0",
+    "@angular-devkit/architect": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
+    "vitest": "^1.3.1"
   },
-  "builders": "./src/lib/nx-plugin/executors.json",
-  "executors": "./src/lib/nx-plugin/executors.json",
-  "generators": "./src/lib/nx-plugin/generators.json",
-  "schematics": "./src/lib/nx-plugin/generators.json",
   "ng-update": {
     "packageGroup": [
       "@analogjs/platform",
@@ -45,7 +41,6 @@
       "@analogjs/vite-plugin-angular",
       "@analogjs/vite-plugin-nitro",
       "@analogjs/vitest-angular"
-    ],
-    "migrations": "./migrations/migration.json"
+    ]
   }
 }
