--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "importHelpers": true,
     "target": "esnext",
     "module": "esnext",
@@ -33,7 +34,11 @@
         "./node_modules/@analogjs/vite-plugin-nitro",
         "packages/vite-plugin-nitro/src/index.ts"
       ],
-      "libs/card": ["libs/card/src/index.ts"]
+      "libs/card": ["libs/card/src/index.ts"],
+      "vitest-angular": [
+        "./node_modules/@analogjs/vitest-angular",
+        "packages/vitest-angular/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
