build: update to Nx 19.1

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "3.0.1",
-    "@nx/angular": "19.0.3",
-    "@nx/devkit": "19.0.3",
+    "@nx/angular": "19.1.0",
+    "@nx/devkit": "19.1.0",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -90,7 +90,7 @@
     "@angular-eslint/eslint-plugin": "17.3.0",
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "^18.0.0",
+    "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
     "@astrojs/markdown-component": "^1.0.5",
@@ -98,14 +98,14 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
     "@ngtools/webpack": "^18.0.0",
-    "@nx/cypress": "19.0.3",
-    "@nx/eslint": "19.0.3",
-    "@nx/eslint-plugin": "19.0.3",
-    "@nx/jest": "19.0.3",
-    "@nx/js": "19.0.3",
-    "@nx/plugin": "19.0.3",
-    "@nx/vite": "19.0.3",
-    "@nx/web": "19.0.3",
+    "@nx/cypress": "19.1.0",
+    "@nx/eslint": "19.1.0",
+    "@nx/eslint-plugin": "19.1.0",
+    "@nx/jest": "19.1.0",
+    "@nx/js": "19.1.0",
+    "@nx/plugin": "19.1.0",
+    "@nx/vite": "19.1.0",
+    "@nx/web": "19.1.0",
     "@schematics/angular": "^18.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
@@ -129,7 +129,7 @@
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "^13.6.6",
+    "cypress": "13.9.0",
     "esbuild": "0.19.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
@@ -148,7 +148,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^18.0.0",
     "nitropack": "^2.9.0",
-    "nx": "19.0.3",
+    "nx": "19.1.0",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
