--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
     "paths": {
       "@analogjs/astro-angular": ["packages/astro-angular/src/index.ts"],
       "@analogjs/content": ["packages/content/src/index.ts"],
+      "@analogjs/content/prism-highlighter": [
+        "packages/content/prism-highlighter/src/index.ts"
+      ],
       "@analogjs/nx": ["packages/nx-plugin/src/index.ts"],
       "@analogjs/platform": [
         "./node_modules/@analogjs/platform",
