feat: finish custom highlighter

--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -23,6 +23,7 @@
     "@angular/core": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "@angular/platform-browser": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "@angular/router": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
+    "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "rxjs": "^6.5.0 || ^7.5.0",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.0.4",
@@ -47,6 +48,6 @@
       "@analogjs/vite-plugin-nitro",
       "@analogjs/vitest-angular"
     ],
-    "migrations": "./migrations/migration.json"
+    "migrations": "./plugin/migrations.json"
   }
 }
